Adding test cases

--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,3 +1,9 @@
+#Enables || disables running in parallel
 junit.jupiter.execution.parallel.enabled = true
-junit.jupiter.execution.parallel.mode.default = same_thread
+
+#same_thread || concurent for methods within test classes
+#junit.jupiter.execution.parallel.mode.default = same_thread
+junit.jupiter.execution.parallel.mode.default = concurrent
+
+#same_thread || concurent for test classes
 junit.jupiter.execution.parallel.mode.classes.default = concurrent
