--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.2.0'
+    }
+}
+
 plugins {
     id 'java'
 }
@@ -11,26 +21,28 @@ repositories {
     mavenCentral()
 }
 
+
+apply plugin: 'org.junit.platform.gradle.plugin'
+
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.5.1'
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
-    testRuntime 'org.junit.jupiter:junit-jupiter-params:5.5.1'
+    testCompile 'org.junit.jupiter:junit-jupiter:5.5.1'
+//    testCompile 'org.junit.jupiter:junit-jupiter-api:5.5.1'
+//    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
+//    testRuntime 'org.junit.jupiter:junit-jupiter-params:5.5.1'
 
     testRuntime 'org.junit.vintage:junit-vintage-engine:5.5.1'
     testRuntime 'org.junit.platform:junit-platform-launcher:1.5.1'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
     testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.0.0'
 
-//    testCompile group: 'org.powermock', name: 'powermock-core', version: '1.7.4'
-//    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '1.7.4'
-//    testCompile group: 'org.powermock', name: 'powermock-reflect', version: '1.7.4'
-//    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '1.7.4'
+    testRuntime 'org.junit.platform:junit-platform-gradle-plugin:1.2.0'
 }
 
 test {
-    useJUnitPlatform()
-    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
-    forkEvery = 1
+//    useJUnitPlatform()
+//    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+//    forkEvery = 1
 }
