--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -2,8 +2,8 @@
 junit.jupiter.execution.parallel.enabled = true
 
 #same_thread || concurent for methods within test classes
-#junit.jupiter.execution.parallel.mode.default = same_thread
-junit.jupiter.execution.parallel.mode.default = concurrent
+junit.jupiter.execution.parallel.mode.default = same_thread
+#junit.jupiter.execution.parallel.mode.default = concurrent
 
 #same_thread || concurent for test classes
-junit.jupiter.execution.parallel.mode.classes.default = concurrent
+junit.jupiter.execution.parallel.mode.classes.default = same_thread
