--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.2.0'
     }
 }
 
@@ -22,27 +21,32 @@ repositories {
 }
 
 
-apply plugin: 'org.junit.platform.gradle.plugin'
+//apply plugin: 'org.junit.platform.gradle.plugin'
 
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     testCompile 'org.junit.jupiter:junit-jupiter:5.5.1'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
+    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.0.0'
 //    testCompile 'org.junit.jupiter:junit-jupiter-api:5.5.1'
 //    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
 //    testRuntime 'org.junit.jupiter:junit-jupiter-params:5.5.1'
 
-    testRuntime 'org.junit.vintage:junit-vintage-engine:5.5.1'
-    testRuntime 'org.junit.platform:junit-platform-launcher:1.5.1'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.0.0'
-    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.0.0'
+//    testRuntime 'org.junit.vintage:junit-vintage-engine:5.5.1'
+//    testRuntime 'org.junit.platform:junit-platform-launcher:1.5.1'
 
-    testRuntime 'org.junit.platform:junit-platform-gradle-plugin:1.2.0'
+//    testRuntime 'org.junit.platform:junit-platform-gradle-plugin:1.2.0'
 }
 
 test {
-//    useJUnitPlatform()
+    useJUnitPlatform()
 //    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
 //    forkEvery = 1
+
+//    filter {
+//        includeTestsMatching "main.CalculatorJunit4Test"
+//        includeTestsMatching "main.CalculatorJunit5Test"
+//    }
 }
